<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.view.BandActivity">

    <TextView
        android:id="@+id/tvThisIs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_is"
        android:textSize="@dimen/text_20"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/tam_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tvBandTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/beatles"
        android:textAlignment="center"
        android:textSize="@dimen/text_30"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvThisIs"
        android:textColor="@color/black"/>
    <ImageView
        android:id="@+id/ivBandImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tam_250"
        android:src="@drawable/beatles"
        android:contentDescription="@string/img_desc"
        android:scaleType="fitXY"
        android:layout_marginTop="@dimen/tam_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBandTitle"/>
    <TextView
        android:id="@+id/tvSongTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song_title"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/text_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBandImage"/>
    <TextView
        android:id="@+id/tvSongLyric"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_12"
        android:layout_marginTop="@dimen/text_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSongTitle"/>

    <Button
        android:id="@+id/buttonVerDetalhes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/tam_30"
        android:layout_marginTop="@dimen/tam_30"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSongLyric" />

</androidx.constraintlayout.widget.ConstraintLayout>